Fix some overlapping issues with the popover and autocomplete elements in the registry

--- a/metacatui/src/main/webapp/css/metacatui-common.css
+++ b/metacatui/src/main/webapp/css/metacatui-common.css
@@ -2360,14 +2360,17 @@ input.subtle:focus,
 	width: 500px;
 	line-height: 1.4em;
 }
-.ui-autocomplete-container{
-	overflow: visible;
-}
 .input-help-msg{
 	padding: .5em 0;
 }
 .progress{
 	margin-top: 2em;
+}
+.ui-autocomplete-container.collapse.in{
+	overflow: visible;
+}
+#collapseParties .popover{
+	z-index: 0;	
 }
 /*******************************************
 Pager View
